Border fix for nav links showing up on mobile devices and arrow positioning tweak on improve page

--- a/src/OagBundle/Resources/public/sass/main.scss
+++ b/src/OagBundle/Resources/public/sass/main.scss
@@ -68,7 +68,7 @@ button,
   font-family: $oag_font;
   background-color: $oag_grey;
   letter-spacing: inherit;
-  line-height: 24px;
+  line-height: 18px;
   color: white;
   font-size: 1em;
   font-weight: bold;
@@ -94,6 +94,8 @@ button,
     background-color: white;
     color: $oag_title;
     float: right;
+    line-height: 18px;
+    height: 50px;
   }
   &.back:hover {
     color: $oag_dark;
@@ -184,12 +186,13 @@ nav {
       display: flex;
     }
     li {
-      display: inline;
+      border: none;
       padding: 0;
       margin-left: 5px;
       a {
         color: $oag_dark;
         padding: 1.5em;
+        border: 0;
         transition: all 0.3s ease 0s;
         &:hover {
           color: black;
@@ -402,7 +405,6 @@ div.jfilestyle.jfilestyle-corner {
   }
   button {
     font-family: $oag_font;
-    line-height: 1.15;
   }
 }
 .upload-info {
@@ -1269,6 +1271,9 @@ table {
   }
   .bottom-page-nav {
     bottom: -85px;
+  }
+  .activity .heading.summary.improve img {
+    width: 86px;
   }
 }
 
